crates/cli/tests/snapshots/initialize_tests__initialize_directory_with_metadata_and_release_version.snap
---
source: crates/cli/tests/initialize_tests.rs
expression: contents
---
packagingDefinition:
  type: PrebuiltDockerImage
  dockerImage: ghcr.io/hasura/ndc-calcite:v1.2.3
supportedEnvironmentVariables:
- name: CONNECTION_URI
  description: The calciteQL connection URI
  defaultValue: calciteql://read_only_user:readonlyuser@35.236.11.122:5432/v3-docs-sample-app
commands:
  update: hasura-ndc-calcite update
cliPlugin:
  name: ndc-calcite
  version: v1.2.3
dockerComposeWatch:
- path: ./
  target: /etc/connector
  action: sync+restart
